prod: minor changes

--- a/formulas.html
+++ b/formulas.html
@@ -160,6 +160,7 @@
     <!-- NAVBAR END -->
     <!-- BACK TO TOP BUTTON -->
     <button class="btn btn-danger position-fixed" id="btn-back-to-top" style="display: none; bottom: 20px; left: 20px; border-radius: 50%; z-index: 99999;" data-bs-toggle="tooltip" data-bs-placement="right" title="Back to Top"><i class="bi bi-arrow-up"></i></button>
+    <h1 class="title text-center mt-5">MathFlare Cheat Sheet</h1>
     <div class="row m-0">
         <div class="col mt-5">
             <h3 class="text-center">Contents</h3>
