prod: added more cheat sheet elements

--- a/formulas.html
+++ b/formulas.html
@@ -167,6 +167,9 @@
             <div class="list-group position-sticky">
                 <a href="#trigonometricnums" class="list-group-item list-group-item-dark list-group-item-action">Trigonometric Numbers</a>
                 <a href="#factorials" class="list-group-item list-group-item-dark list-group-item-action">Populas Factorials</a>
+                <a href="#powoften" class="list-group-item list-group-item-dark list-group-item-action">Powers of Ten</a>
+                <a href="#powoftenneg" class="list-group-item list-group-item-dark list-group-item-action"><i class="bi bi-arrow-return-right"></i> Negative</a>
+                <a href="#powoftenpos" class="list-group-item list-group-item-dark list-group-item-action"><i class="bi bi-arrow-return-right"></i> Positive</a>
             </div>
         </div>
         <div class="col-md-9 mt-5 text-center">
@@ -302,6 +305,189 @@
                             <tr>
                                 <td>20!</td>
                                 <td>2,432,902,008,176,640,000</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
+                <section id="powoften">
+                    <h3>Powers of 10</h3>
+                    <table class="table table-bordered text-white w-100" style="cursor: crosshair;">
+                        <thead class="bg-primary head">
+                            <tr>
+                                <th>Exponent</th>
+                                <th>Number</th>
+                            </tr>
+                        </thead>
+                        <tbody class="formulas-body">
+                            <tr id="powoftenneg">
+                                <th>Negative n<sup>-m</sup></th>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-20</sup></td>
+                                <td>0.00000000000000000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-19</sup></td>
+                                <td>0.0000000000000000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-18</sup></td>
+                                <td>0.000000000000000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-17</sup></td>
+                                <td>0.00000000000000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-16</sup></td>
+                                <td>0.0000000000000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-15</sup></td>
+                                <td>0.000000000000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-14</sup></td>
+                                <td>0.00000000000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-13</sup></td>
+                                <td>0.0000000000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-12</sup></td>
+                                <td>0.000000000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-11</sup></td>
+                                <td>0.00000000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-10</sup></td>
+                                <td>0.0000000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-9</sup></td>
+                                <td>0.000000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-8</sup></td>
+                                <td>0.00000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-7</sup></td>
+                                <td>0.0000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-6</sup></td>
+                                <td>0.000001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-5</sup></td>
+                                <td>0.00001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-4</sup></td>
+                                <td>0.0001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-3</sup></td>
+                                <td>0.001</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-2</sup></td>
+                                <td>0.01</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>-1</sup></td>
+                                <td>0.01</td>
+                            </tr>
+                            <tr id="powoftenpos">
+                                <th>Positive n<sup>m</sup></th>
+                            </tr>
+                            <tr>
+                                <td>10<sup>0</sup></td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>1</sup></td>
+                                <td>10</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>2</sup></td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>3</sup></td>
+                                <td>1,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>4</sup></td>
+                                <td>10,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>5</sup></td>
+                                <td>100,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>6</sup></td>
+                                <td>1,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>7</sup></td>
+                                <td>10,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>8</sup></td>
+                                <td>100,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>9</sup></td>
+                                <td>1,000,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>10</sup></td>
+                                <td>10,000,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>11</sup></td>
+                                <td>100,000,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>12</sup></td>
+                                <td>1,000,000,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>13</sup></td>
+                                <td>10,000,000,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>14</sup></td>
+                                <td>100,000,000,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>15</sup></td>
+                                <td>1,000,000,000,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>16</sup></td>
+                                <td>10,000,000,000,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>17</sup></td>
+                                <td>100,000,000,000,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>18</sup></td>
+                                <td>1,000,000,000,000,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>19</sup></td>
+                                <td>10,000,000,000,000,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>10<sup>20</sup></td>
+                                <td>100,000,000,000,000,000,000</td>
                             </tr>
                         </tbody>
                     </table>
