prod: minor changes

--- a/tos.html
+++ b/tos.html
@@ -215,7 +215,7 @@
         <p>Or use our <a href="contact.html">Contact Form</a></p>
         </section>
         <hr>
-        <footer><p>&copy;2021 MathFlare Co. Ltd.</p></footer>
+        <footer><p>&copy;2021 MathFlare Co. Ltd. All rights reserved. - <a href="https://validator.w3.org/nu/">Validate this website</a> </p></footer>
     </div>
     <!-- TOS END -->
     <!-- SCRIPTS START -->
