--- a/tos.html
+++ b/tos.html
@@ -167,7 +167,7 @@
         </section>
         <section id="important-notice">
         <h3>Important Notice</h3>
-        <p>We rely on 3rd party software such as <i>Google Analytics</i>, <i>Media.net</i>, <i>PostMail</i> and <i>Sign In with Google</i> for monetization, analytics and functionality. By using our website you know knowingly agree to their Privacy Policy and Terms of Use as well.</p>
+        <p>We rely on 3rd party software such as <i>Google Analytics</i>, <i>Media.net</i>, <i>PostMail</i>, <i>hCaptcha</i> and <i>Sign In with Google</i> for monetization, analytics, functionality and protection. By using our website you know knowingly agree to their Privacy Policy and Terms of Use as well.</p>
         </section>
         <section id="info-we-collect">
         <h3>Information We Collect</h3>
